--- a/app/src/main/res/layout/settings_main.xml
+++ b/app/src/main/res/layout/settings_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="회원정보수정"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="154dp"
         tools:layout_editor_absoluteY="141dp" />
 
@@ -19,6 +20,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/menu_settings"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="154dp"
         tools:layout_editor_absoluteY="141dp" />
+
+    <Switch
+        android:id="@+id/commentPush"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="댓글알림기능"
+        android:textSize="30sp" />
+
+    <Switch
+        android:id="@+id/allPush"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="단체알림기능"
+        android:textSize="30sp" />
+
 </LinearLayout>
