--- a/app/src/main/res/layout/activity_member_modify.xml
+++ b/app/src/main/res/layout/activity_member_modify.xml
@@ -30,51 +30,69 @@
             android:text="회원정보수정" />
 
     </LinearLayout>
+    <LinearLayout
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/modify_profile"
             android:layout_width="90dp"
-            android:layout_height="90dp" />
+            android:layout_height="90dp"
+            android:background="@drawable/emptyprofile" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/modify_photoLoad"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:background="@drawable/btn_on"
+            android:text="사진첨부"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/modify_photoDelete"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_gray"
+            android:text="사진삭제"
+            android:textColor="#ffffff" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이름" />
+
+        <EditText
+            android:id="@+id/modify_name"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp" />
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/modify_photoLoad"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="사진첨부"/>
-
-            <Button
-                android:id="@+id/modify_photoDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="사진삭제"/>
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="이름을 입력하세요"/>
-
-            <EditText
-                android:id="@+id/modify_name"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
@@ -85,6 +103,7 @@
             <EditText
                 android:id="@+id/modify_pw"
                 android:layout_width="200dp"
+                android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
@@ -93,6 +112,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
@@ -103,6 +123,7 @@
             <EditText
                 android:id="@+id/modify_change_pw"
                 android:layout_width="200dp"
+                android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
@@ -111,15 +132,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="비밀번호 확인"/>
 
             <EditText
                 android:id="@+id/modify_check_pw"
+                android:layout_marginLeft="10dp"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
@@ -127,15 +151,19 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:gravity="center">
 
             <Button
                 android:id="@+id/memberModify_update"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="등록"/>
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:background="@drawable/btn_on"
+                android:text="등록"
+                android:textColor="@android:color/white"
+                android:textSize="13dp" />
 
         </LinearLayout>
 
