--- a/app/src/main/res/layout/notice_list_view.xml
+++ b/app/src/main/res/layout/notice_list_view.xml
@@ -9,9 +9,8 @@
         android:id="@+id/ntitle"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:text="예시입니다"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:textStyle="bold"/>
+        android:text="예시입니다" />
 
 </LinearLayout>
