--- a/app/src/main/res/layout/list_modify_activity.xml
+++ b/app/src/main/res/layout/list_modify_activity.xml
@@ -134,7 +134,7 @@
                     android:text="유저 주소"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/lmaddr"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -159,7 +159,7 @@
                     android:text="유저 이메일"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/lmemail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
