--- a/app/src/main/res/layout/community_detail.xml
+++ b/app/src/main/res/layout/community_detail.xml
@@ -155,9 +155,12 @@
                         android:layout_height="wrap_content">
 
                         <ListView
+                            android:id="@+id/cmdlistview"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"></ListView>
+
                     </LinearLayout>
+
                 </LinearLayout>
                 <!--<LinearLayout-->
                 <!--android:layout_width="match_parent"-->
