--- a/app/src/main/res/layout/notice_detail.xml
+++ b/app/src/main/res/layout/notice_detail.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
@@ -40,6 +41,7 @@
             style="@style/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="90"
             android:text="공지사항 제목" />
 
@@ -48,29 +50,37 @@
             style="@style/content"
             android:layout_width="match_parent"
             android:layout_height="500dp"
+            android:layout_marginTop="10dp"
+            android:background="#ffffff"
             android:text="공지사항 내용" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
+                style="@style/content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="첨부파일 : "
-                android:layout_marginLeft="20dp"
-                style="@style/content"/>
+                android:layout_height="35dp"
+                android:layout_marginLeft="5dp"
+                android:background="#ffffff"
+                android:text="첨부파일 : " />
 
             <TextView
                 android:id="@+id/ndfilename"
                 style="@style/content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="파일이름" />
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:text="파일이름"
+                android:textColor="@color/black" />
+
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="첨부파일"/>
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/download"
+                android:textColor="@color/basictxtcolor" />
         </LinearLayout>
     </LinearLayout>
 
