--- a/app/src/main/res/layout/settings_detail.xml
+++ b/app/src/main/res/layout/settings_detail.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <TextView
         android:id="@+id/sfilepath"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="sfilepath" />
+        android:text="예시입니다." />
 </LinearLayout>
