--- a/app/src/main/res/layout/complain_insert.xml
+++ b/app/src/main/res/layout/complain_insert.xml
@@ -21,36 +21,40 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/allbackg"
-            android:text="게시글 작성" />
+            android:text="게시글 작성"
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
         <TextView
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/content"
-            android:text="제목: "/>
+            android:background="#ffffff"
+            android:text="제목: "
+            android:textColor="@color/basictxtcolor" />
 
         <EditText
             android:id="@+id/cpititle"
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#ffffff"
             android:ems="15"
             android:hint="제목을 입력하세요"
-            android:inputType="textPersonName"
-            style="@style/content"
-            />
+            android:inputType="textPersonName" />
     </LinearLayout>
 
     <LinearLayout
@@ -58,10 +62,12 @@
         android:layout_height="wrap_content">
 
         <TextView
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/content"
-            android:text="내용 "/>
+            android:background="#ffffff"
+            android:text="내용 "
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
@@ -74,6 +80,7 @@
             style="@style/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#ffffff"
             android:gravity="top"
             android:hint="내용을 입력하세요"
             android:inputType="textMultiLine" />
@@ -84,9 +91,11 @@
 
         <Button
             android:id="@+id/btnPhotoLoad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진첨부" />
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:background="@drawable/btn_on"
+            android:text="사진첨부"
+            android:textColor="@color/basictxtcolor" />
 
         <TextView
             android:id="@+id/fileName"
@@ -101,9 +110,12 @@
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진삭제" />
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/btn_gray"
+            android:text="사진삭제"
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
@@ -111,27 +123,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center">
 
 
         <Button
             android:id="@+id/insert"
             android:layout_width="80dp"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@drawable/btn_on"
+            android:onClick="btnAddClicked"
             android:text="등록"
-            android:textColor="@android:color/white"
-            android:textSize="18dp"
-            android:onClick="btnAddClicked"/>
+            android:textColor="@color/basictxtcolor"
+            android:textSize="18dp" />
 
         <Button
             android:id="@+id/cancel"
             android:layout_width="80dp"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
             android:text="취소"
-            android:textColor="@android:color/white"
+            android:textColor="@color/basictxtcolor"
             android:textSize="18dp" />
     </LinearLayout>
 
