--- a/app/src/main/res/layout/complain_detail.xml
+++ b/app/src/main/res/layout/complain_detail.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
@@ -54,12 +55,13 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/modify_b"/>
+
         <Button
             android:id="@+id/delete"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/cancel_b"/>
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/cancel_b" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,6 +81,7 @@
                 style="@style/content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#ffffff"
                 android:text="문의사항 내용" />
 
 
@@ -89,56 +92,50 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="작성자 : "
-                android:layout_marginLeft="20dp"
                 style="@style/content"
-                />
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginLeft="3dp"
+                android:background="#ffffff"
+                android:text="작성자 : " />
 
             <TextView
                 android:id="@+id/cpdwriter"
                 style="@style/content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
+                android:background="#ffffff"
                 android:text="작성자" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="첨부파일 : "
-                android:layout_marginLeft="20dp"
                 style="@style/content"
-                />
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginLeft="3dp"
+                android:background="#ffffff"
+                android:text="첨부파일 : " />
 
             <TextView
                 android:id="@+id/cpdfilename"
                 style="@style/content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
+                android:background="#ffffff"
                 android:text="파일이름" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnPhotoLoad"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginLeft="20dp"
-                android:text="다운로드" />
-
+                android:background="@drawable/download" />
         </LinearLayout>
-
-
     </LinearLayout>
-
-
-
 </LinearLayout>
