--- a/app/src/main/res/layout/complain_list_view.xml
+++ b/app/src/main/res/layout/complain_list_view.xml
@@ -2,20 +2,27 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginTop="15dp">
 
     <TextView
         android:id="@+id/cptitle"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_marginLeft="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:text="예시입니다"
-        android:padding="10dp"
+        android:textColor="@color/basictxtcolor"
         android:textStyle="bold"/>
     <TextView
         android:id="@+id/cpwriter"
+        android:layout_marginRight="3dp"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:textSize="12dp"
+        android:layout_height="wrap_content"
         android:text="예시입니다"
-        android:padding="10dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
