--- a/app/src/main/res/layout/complain_main.xml
+++ b/app/src/main/res/layout/complain_main.xml
@@ -21,5 +21,5 @@
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="11dp"
-        android:src="@drawable/plus" />
+        android:src="@drawable/write" />
 </RelativeLayout>
