--- a/app/src/main/res/layout/complain_modify.xml
+++ b/app/src/main/res/layout/complain_modify.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
@@ -40,31 +41,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/content"
-            android:text="제목: "/>
+            android:background="#ffffff"
+            android:text="제목: "
+            android:textColor="@color/basictxtcolor" />
 
         <EditText
             android:id="@+id/cpmtitle"
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#ffffff"
             android:ems="15"
             android:hint="제목을 입력하세요"
-            android:inputType="textPersonName"
-            style="@style/content"
-            />
+            android:inputType="textPersonName" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/content"
-            android:text="내용 "/>
+            android:background="#ffffff"
+            android:text="내용 "
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
@@ -77,6 +84,7 @@
             style="@style/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#ffffff"
             android:gravity="top"
             android:hint="내용을 입력하세요"
             android:inputType="textMultiLine" />
@@ -87,14 +95,18 @@
 
         <Button
             android:id="@+id/btnPhotoLoad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진첨부" />
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/btn_gray"
+            android:text="사진첨부"
+            android:textColor="@color/basictxtcolor" />
 
         <TextView
             android:id="@+id/cpmfilename"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
             android:text="파일이름" />
 
     </LinearLayout>
@@ -105,9 +117,13 @@
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진삭제" />
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/btn_on"
+            android:text="사진삭제"
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
@@ -121,21 +137,21 @@
         <Button
             android:id="@+id/modify"
             android:layout_width="80dp"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@drawable/btn_on"
+            android:onClick="btnAddClicked"
             android:text="등록"
-            android:textColor="@android:color/white"
-            android:textSize="18dp"
-            android:onClick="btnAddClicked"/>
+            android:textColor="@color/basictxtcolor"
+            android:textSize="18dp" />
 
         <Button
             android:id="@+id/cancel"
             android:layout_width="80dp"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
             android:text="취소"
-            android:textColor="@android:color/white"
+            android:textColor="@color/basictxtcolor"
             android:textSize="18dp" />
     </LinearLayout>
 </LinearLayout>
