--- a/app/src/main/res/layout/join_main.xml
+++ b/app/src/main/res/layout/join_main.xml
@@ -13,19 +13,23 @@
         android:layout_height="60dp"
         android:orientation="horizontal"
         android:background="@color/titlebarcolor">
+
         <Button
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:background="@drawable/back"
-            android:paddingLeft="10dp" />
+            android:paddingLeft="10dp"
+            android:textColor="@color/basictxtcolor" />
+
         <TextView
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|left"
-            android:text="회원가입" />
+            android:text="회원가입"
+            android:textColor="@color/basictxtcolor" />
     </LinearLayout>
 
     <LinearLayout
@@ -76,7 +80,7 @@
                 android:layout_height="30dp"
                 android:background="@drawable/btn_on"
                 android:text="중복확인"
-                android:textColor="@color/allbackg"
+                android:textColor="@color/basictxtcolor"
                 android:textSize="14sp" />
         </LinearLayout>
         <LinearLayout
