--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -19,28 +19,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2"
+        android:gravity="center"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/loginBtn"
-            android:layout_width="match_parent"
+            android:layout_width="270dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginRight="70dp"
+            android:layout_marginTop="90dp"
             android:background="@drawable/btn_on"
             android:text="@string/login"
             android:textColor="@color/basictxtcolor" />
         <Button
             android:id="@+id/joinBtn"
-            android:layout_width="match_parent"
+            android:layout_width="270dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/btn_gray"
             android:textColor="@color/basictxtcolor"
             android:text="@string/join"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"
             android:layout_marginBottom="70dp"/>
 
     </LinearLayout>
