--- a/app/src/main/res/layout/login_search_pw.xml
+++ b/app/src/main/res/layout/login_search_pw.xml
@@ -17,15 +17,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/basictxtcolor"
             android:text="비밀번호 찾기"
             style="@style/subTitleText"/>
 
     </LinearLayout>
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/search_pw"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_marginTop="80dp"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +38,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/titlebarcolor"
+            android:textColor="@color/basictxtcolor"
             android:text="아이디"
             android:textSize="@dimen/contentSize"/>
         <EditText
@@ -54,7 +56,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/titlebarcolor"
+            android:textColor="@color/basictxtcolor"
             android:text="이름"
             android:textSize="@dimen/contentSize"/>
         <EditText
@@ -75,7 +77,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="이메일"
-            android:textColor="@color/titlebarcolor"
+            android:textColor="@color/basictxtcolor"
             android:textSize="@dimen/contentSize" />
 
         <EditText
@@ -113,14 +115,14 @@
     </LinearLayout>
     <Button
         android:id="@+id/findPw"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="270dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_on"
         android:onClick="btnAddClicked"
         android:text="조회하기"
-        android:textColor="#ffffff"
+        android:textColor="@color/basictxtcolor"
         android:textSize="@dimen/btnSize" />
 
 </LinearLayout>
