--- a/app/src/main/res/layout/complain_modify.xml
+++ b/app/src/main/res/layout/complain_modify.xml
@@ -93,15 +93,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/btnPhotoLoad"
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/btn_gray"
-            android:text="사진첨부"
-            android:textColor="@color/basictxtcolor" />
-
         <TextView
             android:id="@+id/cpmfilename"
             android:layout_width="wrap_content"
@@ -109,20 +100,20 @@
             android:layout_marginLeft="3dp"
             android:text="파일이름" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/btnPhotoLoad"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/imageadd"
+            android:textColor="@color/basictxtcolor" />
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="70dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/btn_on"
-            android:text="사진삭제"
+            android:background="@drawable/imagedelete"
             android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
