--- a/app/src/main/res/layout/activity_member_modify.xml
+++ b/app/src/main/res/layout/activity_member_modify.xml
@@ -55,8 +55,8 @@
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:background="@drawable/btn_on"
-            android:text="사진첨부"
-            android:textColor="#ffffff" />
+            android:text="사진변경"
+            android:textColor="@color/basictxtcolor" />
 
         <Button
             android:id="@+id/modify_photoDelete"
@@ -65,7 +65,7 @@
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_gray"
             android:text="사진삭제"
-            android:textColor="#ffffff" />
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
@@ -85,6 +85,8 @@
         <EditText
             android:id="@+id/modify_name"
             android:layout_width="200dp"
+            android:textSize="13dp"
+            android:hint="변경하실 이름을 입력하세요."
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp" />
     </LinearLayout>
@@ -104,6 +106,7 @@
                 android:id="@+id/modify_pw"
                 android:layout_width="200dp"
                 android:layout_marginLeft="10dp"
+                android:textSize="13dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
@@ -118,12 +121,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="변경할 비밀번호"/>
+                android:text="비밀번호"/>
 
             <EditText
                 android:id="@+id/modify_change_pw"
                 android:layout_width="200dp"
                 android:layout_marginLeft="10dp"
+                android:hint="변경하실 비밀번호를 입력하세요."
+                android:textSize="13dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
@@ -145,6 +150,7 @@
                 android:id="@+id/modify_check_pw"
                 android:layout_marginLeft="10dp"
                 android:layout_width="200dp"
+                android:textSize="13dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
@@ -162,7 +168,7 @@
                 android:layout_height="40dp"
                 android:background="@drawable/btn_on"
                 android:text="등록"
-                android:textColor="@android:color/white"
+                android:textColor="@color/basictxtcolor"
                 android:textSize="13dp" />
 
         </LinearLayout>
