--- a/app/src/main/res/layout/community_comment_item.xml
+++ b/app/src/main/res/layout/community_comment_item.xml
@@ -3,65 +3,77 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="4">
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="3">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/cmi_writer"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="20dp"
+            android:textSize="13dp"
             android:text="글쓴이 : "/>
 
         <TextView
             android:id="@+id/cmi_content"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="14dp"
+            android:textSize="11dp"
+            android:gravity="center"
             android:text="내용"/>
 
         <EditText
             android:id="@+id/cmi_modify_content"
-            android:layout_width="match_parent"
+            android:layout_width="215dp"
             android:layout_height="wrap_content"
-            android:textSize="14dp"
-            android:text="EditText"
-            />
+            android:text="수정내용"
+            android:textSize="13dp" />
 
-    </LinearLayout>
+
 
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_gravity="center"
+
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/cmi_modify_insert"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="3dp"
+            android:textSize="11dp"
+            android:background="@drawable/btn_on"
+            android:textColor="@color/basictxtcolor"
             android:text="등록" />
 
         <Button
             android:id="@+id/cmi_modify"
             android:layout_width="40dp"
-            android:layout_height="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginLeft="3dp"
+            android:textSize="11dp"
+            android:background="@drawable/btn_on"
+            android:textColor="@color/basictxtcolor"
             android:text="수정" />
 
         <Button
             android:id="@+id/cmi_delete"
             android:layout_width="40dp"
-            android:layout_height="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginLeft="3dp"
+            android:textSize="11dp"
+            android:background="@drawable/btn_on"
+            android:textColor="@color/basictxtcolor"
             android:text="삭제" />
-
+    </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
