--- a/app/src/main/res/layout/community_detail.xml
+++ b/app/src/main/res/layout/community_detail.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
@@ -102,6 +103,7 @@
                         style="@style/content"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="#ffffff"
                         android:text="게시판 글" />
 
 
@@ -116,6 +118,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:background="#ffffff"
                         android:text="작성자 : " />
 
                     <TextView
@@ -123,14 +126,14 @@
                         style="@style/content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="#ffffff"
                         android:text="작성자" />
 
                     <Button
                         android:id="@+id/cmdRefresh"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="새로고침"
-                        />
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:background="@drawable/refresh" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -146,17 +149,19 @@
 
                         <EditText
                             android:id="@+id/cmd_cmt_content"
-                            android:layout_width="250dp"
+                            android:layout_width="270dp"
+                            android:textSize="11dp"
                             android:layout_height="wrap_content" />
 
                         <Button
                             android:id="@+id/cmmd_cmt_insert"
-                            android:layout_width="70dp"
-                            android:layout_height="40dp"
+                            android:layout_width="50dp"
+                            android:layout_height="30dp"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/btn_on"
                             android:text="등록"
-                            android:textColor="#ffffff" />
+                            android:textSize="12dp"
+                            android:textColor="@color/basictxtcolor" />
                     </LinearLayout>
 
                     <LinearLayout
