--- a/app/src/main/res/layout/community_insert.xml
+++ b/app/src/main/res/layout/community_insert.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffffffs">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,32 +41,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/content"
-            android:text="제목: "/>
+            android:background="#ffffff"
+            android:textColor="@color/basictxtcolor"
+            android:text="제목: " />
 
         <EditText
             android:id="@+id/cmititle"
+            style="@style/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#ffffff"
             android:ems="15"
             android:hint="제목을 입력하세요"
-            android:inputType="textPersonName"
-            style="@style/content"
-            />
+            android:inputType="textPersonName" />
     </LinearLayout>
 
     <LinearLayout
-        android:background="@color/allbackg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#ffffff">
+
         <TextView
+            style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/content"
-            android:text="내용 "/>
+            android:background="#ffffff"
+            android:textColor="@color/basictxtcolor"
+            android:text="내용 " />
 
     </LinearLayout>
 
@@ -76,7 +83,8 @@
         <ImageView
             android:id="@+id/cmiImageView"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:background="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
@@ -88,12 +96,13 @@
             style="@style/content"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:background="#ffffff"
             android:gravity="top"
             android:hint="내용을 입력하세요"
             android:inputType="textMultiLine" />
 
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,15 +110,15 @@
 
         <Button
             android:id="@+id/cmiPhotonLoad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진첨부" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/imageadd" />
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진삭제" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/imagedelete" />
 
     </LinearLayout>
 
@@ -126,7 +135,7 @@
             android:layout_height="45dp"
             android:background="@drawable/btn_on"
             android:text="등록"
-            android:textColor="@android:color/white"
+            android:textColor="@color/basictxtcolor"
             android:textSize="18dp"
             android:onClick="btnAddClicked"/>
 
@@ -137,7 +146,7 @@
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
             android:text="취소"
-            android:textColor="@android:color/white"
+            android:textColor="@color/basictxtcolor"
             android:textSize="18dp" />
     </LinearLayout>
 
