--- a/app/src/main/res/layout/community_list_view.xml
+++ b/app/src/main/res/layout/community_list_view.xml
@@ -12,13 +12,15 @@
         android:text="예시입니다"
         android:padding="10dp"
         android:src="@drawable/com_facebook_profile_picture_blank_portrait" />
+
     <TextView
         android:id="@+id/cmwriter"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:text="예시입니다"
+        android:gravity="center"
         android:padding="10dp"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        android:text="예시입니다"
+        android:textColor="@color/basictxtcolor"
+        android:textStyle="bold" />
 
 </LinearLayout>
