--- a/app/src/main/res/layout/community_modify.xml
+++ b/app/src/main/res/layout/community_modify.xml
@@ -65,10 +65,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/cmmImageView"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:background="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
@@ -104,18 +106,16 @@
 
         <Button
             android:id="@+id/cmmPhotonLoad"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/btn_on"
-            android:text="사진첨부"
+            android:background="@drawable/imageadd"
             android:textColor="@color/basictxtcolor" />
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/btn_gray"
-            android:text="사진삭제"
+            android:background="@drawable/imagedelete"
             android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
