--- a/app/src/main/res/layout/complain_insert.xml
+++ b/app/src/main/res/layout/complain_insert.xml
@@ -91,10 +91,9 @@
 
         <Button
             android:id="@+id/btnPhotoLoad"
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:background="@drawable/btn_on"
-            android:text="사진첨부"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/imageadd"
             android:textColor="@color/basictxtcolor" />
 
         <TextView
@@ -102,19 +101,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/btn_gray"
-            android:text="사진삭제"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/imagedelete"
             android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
