--- a/app/src/main/res/layout/login_search_id.xml
+++ b/app/src/main/res/layout/login_search_id.xml
@@ -96,16 +96,17 @@
             android:text="' 입니다."
             android:visibility="gone"/>
     </LinearLayout>
+
     <Button
         android:id="@+id/findId"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="270dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_on"
         android:onClick="btnAddClicked"
         android:text="조회하기"
-        android:textColor="#ffffff"
+        android:textColor="@color/basictxtcolor"
         android:textSize="@dimen/btnSize" />
 
 </LinearLayout>
